# Async-CSV-Search-API

./: .env  .gitignore  Dockerfile  README.md  boot.sh  docker-compose.yml  pyproject.toml
app/: __init__.py  celeryconfig.py  config.py  data_providers.py  tasks.py
app/errors/: handlers.py
app/main/: routes.py
tests/: conftest.py  test_api.py  test_data_providers.py  test_result_service.py  test_tasks.py
